--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<html>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: default
+title: Bradley Campbell, Web Developer
+---
+<div class="blurb">
+	<h1>Heading!</h1>
+	<p>Paragraph!</p>
+</div><!-- /.blurb -->
