nav updates and content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: default
 title: Bradley Campbell, Web Developer
 ---
 <div class="blurb">
-	<h1>Heading!</h1>
-	<p>Paragraph!</p>
+	<h1>website</h1>
 </div><!-- /.blurb -->
