--- a/index.html
+++ b/index.html
@@ -2,6 +2,87 @@
 layout: default
 title: Bradley Campbell, Web Developer
 ---
-<div class="blurb">
-	<h1>website</h1>
-</div><!-- /.blurb -->
+<div class="row">
+	<div class = "col-md-4">
+		<h1>Hello.</h1>
+	</div>
+	<div class = "col-md-8">
+		<p>My name is Bradley Campbell.</p>
+		<p>I am a web developer based near Wellington, New Zealand with over 9 years experience in website development.</p>
+		<p>Below you will find my strongest skills listed, as well as some of the websites that I have built.  Also, check out the <a href = "/designs/">designs</a> section of my website which contain concept mockups I have created.</p>
+		<p>If you would like to contact me about a position that your company has, please contact me at: <a href = "mailto: bradley@redknightnz81.com">bradley@redknightnz81.com.</a></p>
+		<h2>My Skills.</h2>
+		<div class="col-md-6">
+<h3>Programming Languages:</h3>
+<ul>
+	<li>HTML / CSS / JavaScript (incl jQuery)</li>
+	<li>PHP</li>
+	<li>Classic ASP</li>
+	<li>JSP</li>
+</ul>
+<h3>Content Management Systems:</h3>
+<ul>
+	<li><strong>WordPress</strong>
+		<ul>
+<li>Installation, migration & theme creation</li>
+<li>WooCommerce</li>
+<li>WPCommerce</li>
+<li>WordPress site migration</li>
+<li>Custom page and post types</li>
+<li>Custom meta information</li>
+		</ul>
+	</li>
+	<li><strong>Magento</strong>
+		<ul>
+<li>Installation and configuration on VPS</li>
+<li>Theme creation & modification.</li>
+<li>Setup with multiple storefronts</li>
+<li>Mass importing / checking SKU / media</li>
+		</ul>
+	</li>
+	<li><strong>Drupal, SilverStripe, CushyCMS</strong>
+		<ul>
+<li>As a content editor only</li>
+		</ul>
+	</li>
+</ul>
+<h3>Server Management / Admin Tools:</h3>
+<ul>
+	<li>Plesk</li>
+	<li>cPanel</li>
+	<li>phpmyAdmin</li>
+	<li>MS SQL Server</li>
+	<li>wampserver</li>
+	<li>Hosting specific management consoles.</li>
+</ul>
+<h3>Operating Systems:</h3>
+<ul>
+	<li>DOS</li>
+	<li>Windows 3.1 through to 10</li>
+	<li>Ubuntu</li>
+</ul>
+<h3>Software:</h3>
+<ul>
+	<li>Adobe Creative suite</li>
+	<li>Microsoft Office suite</li>
+</ul>		
+		</div>
+		<div class="col-md-6">
+<p>Delivering websites from a design to a specific deadline.</p>
+<p>Able to work under pressure.</p>
+<p>Responsible for staff interviews and training.</p>
+<p>Task allocation / management.</p>
+<p>Daily reports.</p>
+<p>Task budgeting / pricing.</p>
+<p>Meeting with clients to discuss their website needs.</p>
+<p>Client training on WordPress, WooCommerce, WPCommerce & Magento.</p>
+<p>Office tech support for 10 Windows based PCs / printer.</p>
+<p>Client website and email support.</p>
+<p>Able to integrate into a team, or work on own.</p>
+<p>Hard working.</p>
+<p>Polite and professional attitude.</p>
+		</div>
+	</div>
+</div>
+	
+
