--- a/_designmockups/trueachievements-concept-mockup.html
+++ b/_designmockups/trueachievements-concept-mockup.html
@@ -16,7 +16,7 @@ additional_images:
 <p>Added in a few more design tweaks which I quite like.</p>
 <h2>Additional Images</h2>
 {% for ad in page.additional_images %}
-  {{ ad[0] }}
+  <a href = "#" target = "_blank">a {{ ad[0] }}</a>
 {% else %}
 <p>There is no additional images for this mockup.</p>
 {% endfor %}
