--- a/_designmockups/trueachievements-concept-mockup.html
+++ b/_designmockups/trueachievements-concept-mockup.html
@@ -17,6 +17,6 @@ additional_images:
 <h2>Additional Images</h2>
 {% for ad_hash in page.additional_images %}
   {% for ad in ad_hash %}
-    <a href="{{ link[1] }}">{{ link[0] }}</a>
+    <a href="{{ ad[1] }}">{{ ad[0] }}</a>
   {% endfor %}
 {% endfor %}
