--- a/_designmockups/trueachievements-concept-mockup.html
+++ b/_designmockups/trueachievements-concept-mockup.html
@@ -8,6 +8,10 @@ additional_images:
   - image: mockup_002.jpg
   - image: mockup_004.jpg
   - image: mockup_003.jpg
+  - image: mockup_004.jpg
+  - image: mockup_003.jpg
+  - image: mockup_004.jpg
+  - image: mockup_003.jpg  
 ---
 <p>To view the original page, click <a href = "http://www.trueachievements.com/" target = "_blank">here</a>.</p>
 <p>This redesign started out just as a way to add some design mockups onto my own website, and see what I could come up with.</p>
