--- a/designs/index.html
+++ b/designs/index.html
@@ -10,33 +10,30 @@ title: Designs
 		<p>Below are some website design concepts and mockups that I have created.</p>
 		<p>Click any of the images below to be taken to a more detailed overview.</p>
 		<p><strong>Content coming soon.</strong></p>
-		<div class="row" style = "display: none;">
-			<div class = "col-md-6">
-				<div class = "image-concept-container">
-					<a href = "design-trueachievements-mockup.php"><img src = "../images/designs/thumbnails/mockup_001.jpg" alt = "" /></a>
-					<p><a href = "design-trueachievements-mockup.php">Stetson Group mobile website redesign mockup.</a></p>
-				</div>
-			</div>
-			<div class = "col-md-6">
-				<div class = "image-concept-container">
-					<a href = "design-trueachievements-mockup.php"><img src = "../images/designs/thumbnails/mockup_002.jpg" alt = "" />
-					<p><a href = "design-trueachievements-mockup.php">Personal website design mockup.</a></p>
-				</div>
-			</div>
+		<div style = "display: none;">
+{% assign end_column = false %}		
+{% assign first_loop = true %}		
+{% for dm in site.designmockups %}	
+  {% if end_column == true %}
 		</div>
-		<div class="row" style = "display: none;">
+		<div class = "row">				
+  {% endif %}  
 			<div class = "col-md-6">
 				<div class = "image-concept-container">
-					<a href = "design-trueachievements-mockup.php"><img src = "../images/designs/thumbnails/mockup_003.jpg" alt = "" /></a>
-					<p><a href = "design-trueachievements-mockup.php">TrueAchievements redesign mockup.</a></p>
+					<a href = "{{ dm.url }}"><img src = "{{ site.baseurl }}images/designs/thumbnails/{{ dm.thumbmail_image }}" alt = "" /></a>
+					<p><a href = "design-trueachievements-mockup.php">{{ dm.title }}</a></p>
 				</div>
-			</div>
-			<div class = "col-md-6">
-				<div class = "image-concept-container">
-					<img src = "../images/designs/thumbnails/mockup_004.jpg" alt = "" /></a>
-					<p><a href = "design-trueachievements-mockup.php">Volunteer Kapiti website redesign mockup.</a></p>
-				</div>
-			</div>
+			</div>  
+  {% if end_column == true %}			
+    {% assign end_column = false %}
+  {% elsif end_column == false and first_loop == true %}
+	{% assign first_loop = false %}
+	{% assign end_column = false %}	
+  {% elsif end_column == false %}		
+	{% assign end_column = true %}
+  {% endif %}
+{% endfor %}		
+		
 		</div>					
 	</div>
 </div>
