--- a/designs/index.html
+++ b/designs/index.html
@@ -10,13 +10,13 @@ title: Designs
 		<p>Below are some website design concepts and mockups that I have created.</p>
 		<p>Click any of the images below to be taken to a more detailed overview.</p>
 		<p><strong>Content coming soon.</strong></p>
-		<div style = "display: none;">
+		<div>
 {% assign end_column = false %}		
 {% assign first_loop = true %}		
 {% for dm in site.designmockups %}	
   {% if end_column == true %}
-		</div>
-		<div class = "row">				
+			</div>
+			<div class = "row">				
   {% endif %}  
 			<div class = "col-md-6">
 				<div class = "image-concept-container">
