--- a/_designmockups/volunteer-kapiti-website-redesign.html
+++ b/_designmockups/volunteer-kapiti-website-redesign.html
@@ -2,7 +2,7 @@
 layout: designmockups
 title: "Volunteer Kapiti website redesign mockup."
 date: 2015-11-20
-thumbmail_image: mockup_002.jpg
+thumbmail_image: mockup_004.jpg
 additional_images:
   - image: volunteer-kapiti-redesign-mockup-home.jpg
   - image: volunteer-kapiti-redesign-mockup-for-volunteers.jpg
@@ -10,7 +10,9 @@ additional_images:
   - image: volunteer-kapiti-redesign-mockup-about-us.jpg
 ---
 <p>To view the original page, click <a href = "http://www.volunteerkapiti.org.nz" target = "_blank">here</a>.</p>
-<p>This redesign started out by the site owner asking what could be done about their website to make it more 'mobile friendly'.</p>
-<p>I have used the colours from the main site, and kept the large banner image for upcoming shows.</p>
-<p>Also contains a long list of upcoming and past shows as per the full site.</p>
-<p>Only this home page was made in the mockup, as shortly after they informed me that they had found someone else to undertake a 'mobile friendly' update to their website.</p>
+<p>I created this concept after one of the managers of Volunteer Kapiti visited a course I was on at the time, seeing if people would be interested in volunteering, the class tutor mentioned my background in website development and went from there.</p>
+<p>I started by updating the logo a bit, moving it to the left and adding in their motto to the right.</p>
+<p>Updated the colour scheme to match the greens and red of their logo.</p>
+<p>Project would have involved being moved onto WordPress - their request.</p>
+<p>Unfortunately this did not proceed due to time constraints and underestimating the work involved.</p>
+<p>I provided them with what I had done, and the design files if they wished to hand it on to someone else.</p>
