--- a/_designmockups/stetson-group-mobile-website-redesign.html
+++ b/_designmockups/stetson-group-mobile-website-redesign.html
@@ -2,7 +2,7 @@
 layout: designmockups
 title: "Stetson Group mobile website redesign mockup."
 date: 2016-10-01
-thumbmail_image: mockup_001.jpg
+thumbnail_image: mockup_001.jpg
 additional_images:
   - image: stetson-mobile-website-redesign-mockup.jpg
 ---
