--- a/_designmockups/volunteer-kapiti-website-redesign.html
+++ b/_designmockups/volunteer-kapiti-website-redesign.html
@@ -2,7 +2,7 @@
 layout: designmockups
 title: "Volunteer Kapiti website redesign mockup."
 date: 2015-11-20
-thumbmail_image: mockup_004.jpg
+thumbnail_image: mockup_004.jpg
 additional_images:
   - image: volunteer-kapiti-redesign-mockup-home.jpg
   - image: volunteer-kapiti-redesign-mockup-for-volunteers.jpg
