--- a/_designmockups/stetson-group-mobile-website-redesign.html
+++ b/_designmockups/stetson-group-mobile-website-redesign.html
@@ -4,7 +4,8 @@ title: "Stetson Group mobile website redesign mockup."
 date: 2016-10-01
 thumbnail_image: mockup_001.jpg
 additional_images:
-  - image: stetson-mobile-website-redesign-mockup.jpg
+  - img_location: stetson-mobile-website-redesign-mockup.jpg
+    img_desc: Home page redesign mockup
 ---
 <p>To view the original page, click <a href = "http://www.stetsongroup.com" target = "_blank">here</a>.</p>
 <p>This redesign started out by the site owner asking what could be done about their website to make it more 'mobile friendly'.</p>
