--- a/_designmockups/volunteer-kapiti-website-redesign.html
+++ b/_designmockups/volunteer-kapiti-website-redesign.html
@@ -4,10 +4,14 @@ title: "Volunteer Kapiti website redesign mockup."
 date: 2015-11-20
 thumbnail_image: mockup_004.jpg
 additional_images:
-  - image: volunteer-kapiti-redesign-mockup-home.jpg
-  - image: volunteer-kapiti-redesign-mockup-for-volunteers.jpg
-  - image: volunteer-kapiti-redesign-mockup-volunteer-jobs.jpg
-  - image: volunteer-kapiti-redesign-mockup-about-us.jpg
+  - img_location: volunteer-kapiti-redesign-mockup-home.jpg
+    img_desc: Home page.
+  - img_location: volunteer-kapiti-redesign-mockup-for-volunteers.jpg
+    img_desc: For Volunteers page.
+  - img_location: volunteer-kapiti-redesign-mockup-volunteer-jobs.jpg
+    img_desc: Volunteers job listings page.
+  - img_location: volunteer-kapiti-redesign-mockup-about-us.jpg
+    img_desc: About Us page.
 ---
 <p>To view the original page, click <a href = "http://www.volunteerkapiti.org.nz" target = "_blank">here</a>.</p>
 <p>I created this concept after one of the managers of Volunteer Kapiti visited a course I was on at the time, seeing if people would be interested in volunteering, the class tutor mentioned my background in website development and went from there.</p>
