--- a/designs/index.html
+++ b/designs/index.html
@@ -20,7 +20,7 @@ title: Designs
 			<div class = "col-md-6">
 				<div class = "image-concept-container">
 					<a href = "{{ dm.url }}"><img src = "{{ site.baseurl }}images/designs/thumbnails/{{ dm.thumbnail_image }}" alt = "" /></a>
-					<p><a href = "design-trueachievements-mockup.php">{{ dm.title }}</a></p>
+					<p><a href = "{{ dm.url }}">{{ dm.title }}</a></p>
 				</div>
 			</div>  
   {% if end_column == true %}			
