--- a/designs/index.html
+++ b/designs/index.html
@@ -19,7 +19,7 @@ title: Designs
   {% endif %}  
 			<div class = "col-md-6">
 				<div class = "image-concept-container">
-					<a href = "{{ dm.url }}.html"><img src = "{{ site.baseurl }}images/designs/thumbnails/{{ dm.thumbnail_image }}" alt = "" /></a>
+					<a href = "{{ dm.url }}.html"><img src = "{{ site.url }}images/designs/thumbnails/{{ dm.thumbnail_image }}" alt = "" /></a>
 					<p><a href = "{{ dm.url }}.html">{{ dm.title }}</a></p>
 				</div>
 			</div>  
